<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="layoutLecturaCuento" type="id"/>
    <item name="layoutIniciarPreguntasCuento" type="id"/>
    <item name="gifPersonajeCuento" type="id"/>
    <item name="layoutPreguntasLectura" type="id"/>
    <item name="layoutResultadosPreguntas" type="id"/>
</resources>