...
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <Button
                android:id="@+id/botonIniciarPreguntas"
                android:background="@drawable/boton_preguntas"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/tamaño_botones"
                android:layout_height="@dimen/tamaño_botones"
                android:layout_gravity="center_horizontal"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EstiloTextoCuentos"
                android:text="@string/iniciar_preguntas"
                android:id="@+id/etiqueta_preguntas"
                />
    </LinearLayout>

</RelativeLayout>
